--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-<a href="https://camcat.github.io">Fault Mechanics</a>
+<a href="/camcat/">Fault Mechanics</a>
 <br>
 <a href="/tecto/">Tectonophysics</a>
