--- a/index.html
+++ b/index.html
@@ -632,6 +632,7 @@
   
   
   
+  /camcat/
 
   <div class="col-12 col-sm-auto people-person">
     
@@ -655,6 +656,7 @@
   
   
   
+  /tecto/
 
   <div class="col-12 col-sm-auto people-person">
     
