--- a/publication/beauce-2017/index.html
+++ b/publication/beauce-2017/index.html
@@ -521,7 +521,7 @@
     
 
   
-  <span >Eric Beaucé</span>, <span ><a href="/author/william-b.-frank/">William B. Frank</a></span>, <span >Alexey Romanenko</span>
+  <span >Eric Beaucé</span>, <span ><a href="/tecto/authors/wbfrank">William B. Frank</a></span>, <span >Alexey Romanenko</span>
   </div>
   
   
