--- a/publication/frank-2017-a/index.html
+++ b/publication/frank-2017-a/index.html
@@ -521,7 +521,7 @@
     
 
   
-  <span ><a href="/author/william-b.-frank/">William B. Frank</a></span>, <span >Piero Poli</span>, <span >Hugo Perfettini</span>
+  <span ><a href="/tecto/authors/wbfrank">William B. Frank</a></span>, <span >Piero Poli</span>, <span >Hugo Perfettini</span>
   </div>
   
   
