--- a/publication/husker-2019/index.html
+++ b/publication/husker-2019/index.html
@@ -521,7 +521,7 @@
     
 
   
-  <span >Allen L Husker</span>, <span ><a href="/author/william-b.-frank/">William B. Frank</a></span>, <span >Guillermo Gonzales</span>, <span >Leticia Avila</span>, <span >Vladimir Kostoglodov</span>, <span >Ekaterina Kazachkina</span>
+  <span >Allen L Husker</span>, <span ><a href="/tecto/authors/wbfrank">William B. Frank</a></span>, <span >Guillermo Gonzales</span>, <span >Leticia Avila</span>, <span >Vladimir Kostoglodov</span>, <span >Ekaterina Kazachkina</span>
   </div>
   
   
