--- a/publication/chao-2019/index.html
+++ b/publication/chao-2019/index.html
@@ -521,7 +521,7 @@
     
 
   
-  <span >Kevin Chao</span>, <span >Zhigang Peng</span>, <span ><a href="/author/william-b.-frank/">William B. Frank</a></span>, <span >Germán A Prieto</span>, <span >Kazushige Obara</span>
+  <span >Kevin Chao</span>, <span >Zhigang Peng</span>, <span ><a href="/tecto/authors/wbfrank">William B. Frank</a></span>, <span >Germán A Prieto</span>, <span >Kazushige Obara</span>
   </div>
   
   
