--- a/publication/frank-2013/index.html
+++ b/publication/frank-2013/index.html
@@ -521,7 +521,7 @@
     
 
   
-  <span ><a href="/author/william-b.-frank/">William B. Frank</a></span>, <span >Nikolaï M Shapiro</span>, <span >Vladimir Kostoglodov</span>, <span >Allen L Husker</span>, <span >Michel Campillo</span>, <span >Juan S Payero</span>, <span >Germán A Prieto</span>
+  <span ><a href="/tecto/authors/wbfrank">William B. Frank</a></span>, <span >Nikolaï M Shapiro</span>, <span >Vladimir Kostoglodov</span>, <span >Allen L Husker</span>, <span >Michel Campillo</span>, <span >Juan S Payero</span>, <span >Germán A Prieto</span>
   </div>
   
   
