trying to fix author link

--- a/publication/aden-2020/index.html
+++ b/publication/aden-2020/index.html
@@ -521,7 +521,7 @@
     
 
   
-  <span ><a href="/tecto/authors/faden">faden</a></span>, <span >Claudio Satriano</span>, <span >Pascal Bernard</span>, <span >Natalia Poiata</span>, <span >El Madani Aissaoui</span>, <span >Jean-Pierre Villotte</span>, <span ><a href="/tecto/authors/wbfrank">William B. Frank</a></span>
+  <span ><a href="/tecto/author/faden/">faden</a></span>, <span >Claudio Satriano</span>, <span >Pascal Bernard</span>, <span >Natalia Poiata</span>, <span >El Madani Aissaoui</span>, <span >Jean-Pierre Villotte</span>, <span ><a href="/tecto/author/william-b.-frank/">William B. Frank</a></span>
   </div>
   
   
