--- a/publication/lengline-2017/index.html
+++ b/publication/lengline-2017/index.html
@@ -521,7 +521,7 @@
     
 
   
-  <span >Olivier, Lengliné</span>, <span ><a href="/tecto/authors/wbfrank">William B. Frank</a></span>, <span >David Marsan</span>, <span >Jean-Paul Ampuero</span>
+  <span >Olivier, Lengliné</span>, <span ><a href="/tecto/author/william-b.-frank/">William B. Frank</a></span>, <span >David Marsan</span>, <span >Jean-Paul Ampuero</span>
   </div>
   
   
