--- a/publication/rousset-2017/index.html
+++ b/publication/rousset-2017/index.html
@@ -521,7 +521,7 @@
     
 
   
-  <span >Baptiste Rousset</span>, <span >Michel Campillo</span>, <span >Cécile Lasserre</span>, <span ><a href="/tecto/authors/wbfrank">William B. Frank</a></span>, <span >Nathalie Cotte</span>, <span >Andrea Walpersdorf</span>, <span >Anne Socquet</span>, <span >Vladimir Kostoglodov</span>
+  <span >Baptiste Rousset</span>, <span >Michel Campillo</span>, <span >Cécile Lasserre</span>, <span ><a href="/tecto/author/william-b.-frank/">William B. Frank</a></span>, <span >Nathalie Cotte</span>, <span >Andrea Walpersdorf</span>, <span >Anne Socquet</span>, <span >Vladimir Kostoglodov</span>
   </div>
   
   
