--- a/publication/beauce-2019/index.html
+++ b/publication/beauce-2019/index.html
@@ -521,7 +521,7 @@
     
 
   
-  <span >Eric Beaucé</span>, <span ><a href="/tecto/authors/wbfrank">William B. Frank</a></span>, <span >Anne Paul</span>, <span >Michel Campillo</span>, <span >Robert D van der Hilst</span>
+  <span >Eric Beaucé</span>, <span ><a href="/tecto/author/william-b.-frank/">William B. Frank</a></span>, <span >Anne Paul</span>, <span >Michel Campillo</span>, <span >Robert D van der Hilst</span>
   </div>
   
   
