--- a/publication/frank-2016-c/index.html
+++ b/publication/frank-2016-c/index.html
@@ -521,7 +521,7 @@
     
 
   
-  <span ><a href="/tecto/authors/wbfrank">William B. Frank</a></span>
+  <span ><a href="/tecto/author/william-b.-frank/">William B. Frank</a></span>
   </div>
   
   
