--- a/publication/frank-2018-c/index.html
+++ b/publication/frank-2018-c/index.html
@@ -521,7 +521,7 @@
     
 
   
-  <span ><a href="/tecto/authors/wbfrank">William B. Frank</a></span>, <span >Baptiste Rousset</span>, <span >Cécile Lasserre</span>, <span >Michel Campillo</span>
+  <span ><a href="/tecto/author/william-b.-frank/">William B. Frank</a></span>, <span >Baptiste Rousset</span>, <span >Cécile Lasserre</span>, <span >Michel Campillo</span>
   </div>
   
   
