--- a/publication/jolivet-2020/index.html
+++ b/publication/jolivet-2020/index.html
@@ -521,7 +521,7 @@
     
 
   
-  <span >Romain Jolivet</span>, <span ><a href="/tecto/authors/wbfrank">William B. Frank</a></span>
+  <span >Romain Jolivet</span>, <span ><a href="/tecto/author/william-b.-frank/">William B. Frank</a></span>
   </div>
   
   
