--- a/publication/perfettini-2018/index.html
+++ b/publication/perfettini-2018/index.html
@@ -521,7 +521,7 @@
     
 
   
-  <span >Hugo Perfettini</span>, <span ><a href="/tecto/authors/wbfrank">William B. Frank</a></span>, <span >David Marsan</span>, <span >Michel Bouchon</span>
+  <span >Hugo Perfettini</span>, <span ><a href="/tecto/author/william-b.-frank/">William B. Frank</a></span>, <span >David Marsan</span>, <span >Michel Bouchon</span>
   </div>
   
   
