--- a/publication/wu-2015/index.html
+++ b/publication/wu-2015/index.html
@@ -521,7 +521,7 @@
     
 
   
-  <span >Chunquan Wu</span>, <span >Robert A Guyer</span>, <span >David R Shelly</span>, <span >Daniel Trugman</span>, <span ><a href="/tecto/authors/wbfrank">William B. Frank</a></span>, <span >Joan Gomberg</span>, <span >Paul A Johnson</span>
+  <span >Chunquan Wu</span>, <span >Robert A Guyer</span>, <span >David R Shelly</span>, <span >Daniel Trugman</span>, <span ><a href="/tecto/author/william-b.-frank/">William B. Frank</a></span>, <span >Joan Gomberg</span>, <span >Paul A Johnson</span>
   </div>
   
   
