obsessively changed homepage paddings

--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
   
   
 
-  <section id="about" class="home-section wg-about   " style="background-color: rgb(247,247,247);padding: 60px 0 20px 0;" >
+  <section id="about" class="home-section wg-about   " style="background-color: rgb(247,247,247);padding: 60px 0 0 0;" >
     <div class="container">
       
 
