--- a/index.html
+++ b/index.html
@@ -690,7 +690,7 @@ We are part of the
       <h2><a href="/tecto/">William B. Frank</a></h2>
       <h3>Assistant Professor</h3>
       
-      <p class="people-interests">Tectophysics</p>
+      <p class="people-interests">Tectonophysics</p>
     </div>
   </div>
   
