--- a/index.html
+++ b/index.html
@@ -572,8 +572,8 @@ We are part of the
 <a href="https://www.mit.edu" target="_blank" rel="noopener">MIT</a>.</p>
 <p>We are two research groups focused on earthquake science, covering everything from observational seismology and geodesy to numerical and analytical modeling:<br/>
 
-<a href="/camcat/">Fault Mechanics</a>, led by Assistant Professor Camilla Cattania,<br/>
-and 
+<a href="/camcat/">Fault Mechanics</a>, led by Assistant Professor Camilla Cattania, and<br/>
+
 <a href="/tecto/">Tectonophysics</a>, led by Assistant Professor William Frank.<br/></p>
 <p><em>Prospective students and postdoctoral researchers</em>: if interested in joining us, please reach out to us with a description of your research interests and your CV.</p>
 
