--- a/publication/farge-2020/index.html
+++ b/publication/farge-2020/index.html
@@ -289,7 +289,7 @@
   
   "author": {
     "@type": "Person",
-    "name": "Gaspard Farge"
+    "name": "gfarge"
   },
   
   "publisher": {
@@ -504,7 +504,7 @@
     
 
   
-  <span >Gaspard Farge</span>, <span >Nikolaï M Shapiro</span>, <span ><a href="/tecto/author/william-b.-frank/">William B. Frank</a></span>
+  <span ><a href="/tecto/author/gfarge/">gfarge</a></span>, <span >Nikolaï M Shapiro</span>, <span ><a href="/tecto/author/william-b.-frank/">William B. Frank</a></span>
   </div>
   
   
