--- a/publication/index.html
+++ b/publication/index.html
@@ -910,7 +910,7 @@
         
 
   
-  <span ><a href="/tecto/author/gfarge/">gfarge</a></span>, <span >Nikolaï M Shapiro</span>, <span ><a href="/tecto/author/william-b.-frank/">William B. Frank</a></span>
+  <span ><a href="/tecto/author/gaspard-farge/">Gaspard Farge</a></span>, <span >Nikolaï M Shapiro</span>, <span ><a href="/tecto/author/william-b.-frank/">William B. Frank</a></span>
       </div>
       
     </div>
