--- a/index.html
+++ b/index.html
@@ -1071,7 +1071,7 @@ We are part of the
     
 
   
-  <span >Gaspard Farge</span>, <span >Nikolaï M Shapiro</span>, <span ><a href="/tecto/author/william-b.-frank/">William B. Frank</a></span>
+  <span ><a href="/tecto/author/gaspard-farge/">Gaspard Farge</a></span>, <span >Nikolaï M Shapiro</span>, <span ><a href="/tecto/author/william-b.-frank/">William B. Frank</a></span>
   </div>
   
   
