--- a/publication/index.html
+++ b/publication/index.html
@@ -699,7 +699,7 @@
         
 
   
-  <span ><a href="/tecto/author/florent-aden-antoniow/">Florent Aden-Antoniow</a></span>, <span ><a href="/tecto/author/william-b.-frank/">William B. Frank</a></span>, <span ><a href="/tecto/author/lseydoux/">lseydoux</a></span>
+  <span ><a href="/tecto/author/florent-aden-antoniow/">Florent Aden-Antoniow</a></span>, <span ><a href="/tecto/author/william-b.-frank/">William B. Frank</a></span>, <span ><a href="/tecto/author/leonard-simon-seydoux/">Leonard Simon Seydoux</a></span>
       </div>
       
     </div>
