--- a/index.html
+++ b/index.html
@@ -825,7 +825,7 @@ We are part of the
     
 
   
-  <span ><a href="/tecto/author/florent-aden-antoniow/">Florent Aden-Antoniow</a></span>, <span ><a href="/tecto/author/william-b.-frank/">William B. Frank</a></span>, <span ><a href="/tecto/author/lseydoux/">lseydoux</a></span>
+  <span ><a href="/tecto/author/florent-aden-antoniow/">Florent Aden-Antoniow</a></span>, <span ><a href="/tecto/author/william-b.-frank/">William B. Frank</a></span>, <span ><a href="/tecto/author/leonard-simon-seydoux/">Leonard Simon Seydoux</a></span>
   </div>
   
   
