fix date aden-2022

--- a/publication/index.html
+++ b/publication/index.html
@@ -903,7 +903,7 @@
   <div class="media-body">
 
     <h3 class="article-title mb-0 mt-0">
-      <a href="/publication/aden-2022/" >An Adaptable Random Forest Model for the Declustering of Earthquake Catalogs</a>
+      <a href="/publication/aden-2022/" >An adaptable random forest model for the declustering of earthquake catalogs</a>
     </h3>
 
     
