update eric pubs

--- a/publication/beauce-2019/index.html
+++ b/publication/beauce-2019/index.html
@@ -289,7 +289,7 @@
   
   "author": {
     "@type": "Person",
-    "name": "Eric Beaucé"
+    "name": "ebeauce"
   },
   
   "publisher": {
@@ -504,7 +504,7 @@
     
 
   
-  <span >Eric Beaucé</span>, <span ><a href="/tecto/author/william-b.-frank/">William B. Frank</a></span>, <span >Anne Paul</span>, <span >Michel Campillo</span>, <span >Robert D van der Hilst</span>
+  <span ><a href="/tecto/author/ebeauce/">ebeauce</a></span>, <span ><a href="/tecto/author/william-b.-frank/">William B. Frank</a></span>, <span >Anne Paul</span>, <span >Michel Campillo</span>, <span >Robert D van der Hilst</span>
   </div>
   
   
