--- a/publication/frank-2018-a/index.html
+++ b/publication/frank-2018-a/index.html
@@ -504,7 +504,7 @@
     
 
   
-  <span ><a href="/tecto/author/william-b.-frank/">William B. Frank</a></span>, <span >Rachel E Abercrombie</span>
+  <span ><a href="/tecto/author/william-b.-frank/">William B. Frank</a></span>, <span ><a href="/tecto/author/rea/">rea</a></span>
   </div>
   
   
