--- a/publication/frank-2017-a/index.html
+++ b/publication/frank-2017-a/index.html
@@ -504,7 +504,7 @@
     
 
   
-  <span ><a href="/tecto/author/william-b.-frank/">William B. Frank</a></span>, <span >Piero Poli</span>, <span >Hugo Perfettini</span>
+  <span ><a href="/tecto/author/william-b.-frank/">William B. Frank</a></span>, <span ><a href="/tecto/author/ppoli/">ppoli</a></span>, <span >Hugo Perfettini</span>
   </div>
   
   
