--- a/index.html
+++ b/index.html
@@ -1071,7 +1071,7 @@ We are part of the
     
 
   
-  <span >Leoncio Cabrera</span>, <span >Piero Poli</span>, <span ><a href="/tecto/author/william-b.-frank/">William B. Frank</a></span>
+  <span >Leoncio Cabrera</span>, <span ><a href="/tecto/author/ppoli/">ppoli</a></span>, <span ><a href="/tecto/author/william-b.-frank/">William B. Frank</a></span>
   </div>
   
   
