--- a/publication/cabrera-2022/index.html
+++ b/publication/cabrera-2022/index.html
@@ -504,7 +504,7 @@
     
 
   
-  <span >Leoncio Cabrera</span>, <span >Piero Poli</span>, <span ><a href="/tecto/author/william-b.-frank/">William B. Frank</a></span>
+  <span >Leoncio Cabrera</span>, <span ><a href="/tecto/author/ppoli/">ppoli</a></span>, <span ><a href="/tecto/author/william-b.-frank/">William B. Frank</a></span>
   </div>
   
   
