--- a/index.html
+++ b/index.html
@@ -812,7 +812,7 @@ We are part of the
 <div class="card-simple">
 
   <h3 class="article-title mb-1 mt-3">
-    <a href="/tecto/publication/mouchon-2023/">Subdaily Slow Fault Slip Dynamics Captured by Low-Frequency Earthquakes</a>
+    <a href="/tecto/publication/mouchon-2023/">Subdaily slow fault slip dynamics captured by low-frequency earthquakes</a>
   </h3>
 
   
