--- a/publication/index.html
+++ b/publication/index.html
@@ -713,7 +713,7 @@
   <div class="media-body">
 
     <h3 class="article-title mb-0 mt-0">
-      <a href="/publication/mouchon-2023/" >Subdaily Slow Fault Slip Dynamics Captured by Low-Frequency Earthquakes</a>
+      <a href="/publication/mouchon-2023/" >Subdaily slow fault slip dynamics captured by low-frequency earthquakes</a>
     </h3>
 
     
