--- a/publication/aden-2020/index.html
+++ b/publication/aden-2020/index.html
@@ -780,8 +780,8 @@
 
       <div class="media-body">
         <h5 class="card-title"><a href="/author/florent-aden-antoniow/">Florent Aden-Antoniow</a></h5>
-        <h6 class="card-subtitle">Postdoctoral Associate</h6>
-        <p class="card-text">Postdoctoral Researcher</p>
+        <h6 class="card-subtitle">R&amp;D Data Scientist</h6>
+        <p class="card-text">I am interested in the statistical behavior of earthquakes.</p>
         <ul class="network-icon" aria-hidden="true">
   
     
