--- a/publication/wimez-2022/index.html
+++ b/publication/wimez-2022/index.html
@@ -782,7 +782,7 @@
 
       <div class="media-body">
         <h5 class="card-title"><a href="/author/mathilde-wimez/">Mathilde Wimez</a></h5>
-        <h6 class="card-subtitle">Graduate Student</h6>
+        <h6 class="card-subtitle">Field Technician</h6>
         <p class="card-text">Graduate student</p>
         <ul class="network-icon" aria-hidden="true">
   
