--- a/publication/index.html
+++ b/publication/index.html
@@ -725,7 +725,7 @@
   <div class="media-body">
 
     <h3 class="article-title mb-0 mt-0">
-      <a href="/publication/beauce-2023/" ></a>
+      <a href="/publication/beauce-2023/" >BPMF: A backprojection and matched-filtering workflow for automated earthquake detection and location</a>
     </h3>
 
     
