--- a/index.html
+++ b/index.html
@@ -812,7 +812,7 @@ We are part of the
 <div class="card-simple">
 
   <h3 class="article-title mb-1 mt-3">
-    <a href="/tecto/publication/beauce-2023/"></a>
+    <a href="/tecto/publication/beauce-2023/">BPMF: A backprojection and matched-filtering workflow for automated earthquake detection and location</a>
   </h3>
 
   
